--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<h1>New Repo</h1>
-<p>This is a new feature</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <script src="script.js
+  "></script>
+  </body>
+</html>
